SNTAB-86 change games logic (#7)
